[package]
name = "velox_graph"
version = "2.0.0"
edition = "2021"
description = "VeloxGraph is an extremely fast, efficient, low-level, in-memory, minimal graph database (wow, that is a mouth full). It is not revolutionary in its design but has a few key features that make it vital to the development of a new type of neural network architecture that I am working on, and THAT is what I consider revolutionary."
license = "Apache-2.0"
repository = "https://github.com/taylerallen6/velox_graph"
readme = "README.md"
documentation = "https://docs.rs/velox_graph"

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
rand = "0.9.0"
bincode = "2.0.1"
